# MY_ML_TOOLS

./: .gitignore  API_REFERENCE.md  COMPLETE_PARAMETER_REFERENCE.py  DOCUMENTATION_INDEX.md  FAQ.md  FEATURE_USAGE_GUIDE.md  FRIEND_GUIDE.md  INSTALL.md  KAGGLE_NOTEBOOK_GUIDE.ipynb  LICENSE  MANIFEST.in  Makefile  OPTUNA_PARAMETER_GUIDE.md  QUICKSTART.md  QUICKSTART_REFERENCE.py  README.md  README_MANUAL.md  SETUP_COMPLETE.md  VISUALIZATION_GUIDE.md  example_visualization_guide.py  indent_fix.py  test_fold_details.py  test_new_parameters.py  test_preprocessing_cache.py  test_search_types.py  tox.ini
examples/: README.md  example1_basic_classification.py  example2_regression.py  example3_hyperparameter_tuning.py  example4_real_dataset.py  example5_new_features.py  example_california_housing.py  example_fold_tracking.py  example_optuna_advanced.py  example_search_optimization.py
exprement/: pss6e4-xgb-cv-0-979805.ipynb  research.ipynb
mlruns/1/models/m-56056a1b8a8c43328f3f86880cbd0a26/artifacts/: MLmodel
mlruns/1/models/m-6a9acde3d5e2498196b6d0f1d41105e3/artifacts/: MLmodel  conda.yaml  requirements.txt
mlruns/1/models/m-6cdaa4dfc0574128b1f7bf8cd30b07f9/artifacts/: MLmodel  conda.yaml  requirements.txt
mlruns/1/models/m-80e5100dc3b34121bd0ce39d80ea776e/artifacts/: MLmodel
mlruns/1/models/m-bcc6e6976bac40c7afab3166e0618b6d/artifacts/: MLmodel
my_ml_toolkit/: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  PUBLISHING_GUIDE.md  __init__.py  evaluator.py  publish.py  pyproject.toml  visualizations.py
my_ml_toolkit/.github/workflows/: quality.yml  tests.yml
my_ml_toolkit/my_ml_toolkit/: __init__.py  evaluator.py
tests/: conftest.py  test_evaluator.py
