[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_ml_toolkit"
version = "0.1.0"
description = "Enterprise-grade machine learning evaluation pipeline for classification and regression tasks."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "LAFFI01", email = "your.email@example.com"}
]
keywords = [
    "machine-learning",
    "model-evaluation",
    "hyperparameter-tuning",
    "imbalanced-learning",
    "scikit-learn",
    "xgboost",
    "classification",
    "regression"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "pandas>=2.0.0,<4.0.0",
    "numpy>=1.24.0,<3.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "imbalanced-learn>=0.11.0,<1.0.0",
    "scikit-learn>=1.5.0,<2.0.0",
    "joblib>=1.0.0,<2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.0.0",
    "pre-commit>=3.0.0",
    "build>=0.10.0",
    "twine>=4.0.0"
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/LAFFI01/MY_ML"
Repository = "https://github.com/LAFFI01/MY_ML.git"
Documentation = "https://github.com/LAFFI01/MY_ML#readme"
"Bug Tracker" = "https://github.com/LAFFI01/MY_ML/issues"

[tool.setuptools]
packages = ["my_ml_toolkit"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=my_ml_toolkit --cov-report=html --cov-report=term-missing"